# GameOfDomes_domeClient

./: .gitignore  CMakeLists.txt  README  Thumbs.db  fisheye.xml  main.cpp  questions_for_client
2015-03-06 SumNumbers/: Readme.txt
2015-03-06 SumNumbers/Assets/Scenes/: in_game.unity
2015-03-06 SumNumbers/Assets/Scripts/: ShipControlls.cs
2015-03-06 SumNumbers/Assets/Scripts/Network/: SFS2X_Connect.cs
2015-03-06 SumNumbers/myExt/myExtExtension/: build.xml
2015-03-06 SumNumbers/myExt/myExtExtension/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
2015-03-06 SumNumbers/myExt/myExtExtension/src/myExtPackage/: MainExtension.java  UpdateTransform.java
2015-03-13 pre-game-prototyp/: sfs-config.xml
2015-03-13 pre-game-prototyp/Assets/Scenes/: InGameGunner.unity  InGamePilot.unity  MainMenu.unity  canvasGUITest.unity
2015-03-13 pre-game-prototyp/Assets/Scripts/: PilotControlls.cs  ProjectileBehaviour.cs
2015-03-13 pre-game-prototyp/Assets/Scripts/GUI/: GameLobby.cs  GameRoom.cs  GuiCustomStyle.cs  MainMenu.cs
2015-03-13 pre-game-prototyp/Assets/Scripts/Network/: SFSHandler.cs  sfs-config.xml
2015-03-13 pre-game-prototyp/KexPrototype_02_Data/: PlayerConnectionConfigFile  mainData  output_log.txt  sharedassets0.assets
2015-03-13 pre-game-prototyp/SFSUnity_Data/: PlayerConnectionConfigFile  level2  level3  mainData  sharedassets3.assets  sharedassets4.assets
2015-03-13 pre-game-prototyp/confTest_Data/: PlayerConnectionConfigFile  level0  level1  level3  mainData  output_log.txt  sharedassets1.assets  sharedassets2.assets  sharedassets3.assets  sharedassets4.assets
2015-03-13 pre-game-prototyp/prototyp_03_Data/: PlayerConnectionConfigFile  level1  mainData  output_log.txt  sharedassets0.assets  sharedassets1.assets  sharedassets2.assets  sharedassets3.assets
2015-03-13 pre-game-prototyp/prototyp_global_Data/: level0  level2  level3  mainData  output_log.txt  sharedassets0.assets  sharedassets4.assets
2015-03-13 pre-game-prototyp/prototyp_global_config_Data/: PlayerConnectionConfigFile  level2  output_log.txt  sharedassets0.assets
2015-03-13 pre-game-prototyp/src/Assets/Prefabs/: testProjectile.prefab
2015-03-13 pre-game-prototyp/src/Assets/Scenes/: GameLobby.unity  GameRoom.unity  InGamePilot.unity
2015-03-13 pre-game-prototyp/src/Assets/Scripts/: GunnerControlls.cs  PilotControlls.cs
2015-03-13 pre-game-prototyp/src/Assets/Scripts/GUI/: GameLobby.cs  MainMenu.cs
2015-03-13 pre-game-prototyp/src/Assets/Scripts/Network/: SFSHandler.cs  sfs-config.xml
Configuration/: sfs-config.xml  variables.txt
classroom/: Billboard.cpp  Billboard.h  EnemyShip.cpp  EnemyShip.h  GameLight.cpp  GameLight.h  GameObject.cpp  GameObject.h  Includes.h  NetworkManager.cpp  NetworkManager.h  Object.cpp  Object.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  Projectile.cpp  Projectile.h  SkyBox.h  SoundManager.cpp  SoundManager.h  SpaceObject.cpp  SpaceObject.h  SpaceShip.h  Utilities.cpp  Utilities.h
max_spaceshooter/src/: ScumOfSpace.as
max_spaceshooter/src/global/: VARS.as
models/: Plattbrygga.mtl  asteroid.ive  asteroid3.ive  asteroid4.ive  asteroid_1.ive  asteroid_1m.mtl  asteroid_50m.ive  asteroid_5meter.ive  asteroid_mindre.mtl  engine_powerup.ive  fiendeskepp.ive  fiendeskepp16.ive  health_powerup.ive  kbrygga.ive  kurvad_brygga.ive  kurvbrygga.ive  kurvbrygga_1,5.ive  kurvbrygga_lasse.ive  kurvbrygga_lasse.mtl  kurvbrygga_lasselagom.ive  kurvbrygga_lasseliten.ive  kurvbrygga_lassemellan.ive  kurvbrygga_lassesmal.ive  planet.ive  plattbrygga.ive  plattbrygga_2.mtl  plattbrygga_3.mtl  shield_powerup.ive  shield_powerup.mtl  skott.ive  skott20m.mtl  skott_powerup.ive  skottb.ive  skottg.ive  skottr.ive
osgExample/: check_codecs.bat  fisheye.xml  main.cpp  run.bat  skybox.cpp  skybox.h
osgExample/assets/models/: sphere_final.mtl
src/: main.cpp
src/classroom/: Projectile.cpp  Projectile.h
src/kameraföljerTest_henrietta/: main.cpp  osgExample_msvc12.vcxproj
src/models/: asteroidhej.mtl  fighter.ive  mothership.ive  skott_prototyp.ive  sphere200polyshej.mtl
src/osg_example_medenkelscengraf/: main.cpp
textures/: Thumbs.db
